archive/k8s-legacy-ollama/ollama-externalname-OLD.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: cloudmart
spec:
  type: ExternalName
  externalName: 192.168.1.112
  ports:
    - name: http
      port: 11434
      targetPort: 11434
