archive/k8s-legacy-ollama/open-webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: openwebui.192.168.1.112.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui-service
                port:
                  number: 80
